--- a/Views/CustomersModule/RegisterCustomerPage.xaml
+++ b/Views/CustomersModule/RegisterCustomerPage.xaml
@@ -10,36 +10,157 @@
 
     <Grid Background="{StaticResource BackgroundBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
-
+            <RowDefinition Height="68"/>
+            <!--Cabecera-->
             <RowDefinition Height="*"/>
-            
+            <!--Contenido Principal-->
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15, 10, 0, 10">
-            <TextBlock Style="{StaticResource HeaderLabelStyle}" Text="{DynamicResource RegCustomer_Header}"/>
+        <Border Grid.Row="0" BorderThickness="0,0,0,0.5"
+                BorderBrush="{StaticResource SecondaryBrush}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="6*"/>
+                    <ColumnDefinition Width="4*"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock Style="{StaticResource DescriptionLabelStyle}" Text="{DynamicResource RegCustomer_Desc}"/>
-        </StackPanel>
+                <StackPanel Grid.Column="0" Orientation="Vertical" Margin="20,0,0,10" 
+                    HorizontalAlignment="Left" VerticalAlignment="Bottom">
+                    <TextBlock Style="{StaticResource HeaderLabelStyle}"
+                       Text="{DynamicResource RegCustomer_Header}"/>
+                    <TextBlock Style="{StaticResource DescriptionLabelStyle}"
+                       Text="{DynamicResource RegCustomer_Desc}"/>
+                </StackPanel>
+            </Grid>
+            
+            
+        </Border>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="20, 20, 20, 0">
-            <StackPanel Orientation="Vertical">
-                <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_Name}"
-                 Width="200" Margin="0, 10"/>
-                <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_LastName}"
-                 Width="200" />
-                <TextBox Grid.Column="0" Margin="0, 10" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_PhoneNumber}"
-                Width="200" />
-                <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_Address}"
-                Width="200"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="36"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="60"/>
+            </Grid.RowDefinitions>
+
+            <StackPanel Grid.Row="0" VerticalAlignment="Bottom" Margin="20,0">
+                <TextBlock Text="{DynamicResource RegCostumer_CostumerInfo}"
+           Style="{DynamicResource SubtitleLabelStyle}"/>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="30, 30, 30, 30">
-                <Button Style="{DynamicResource SecondaryButtonStyle}" Content="{DynamicResource Glb_BtnCancel}" Margin="10"
-                        Click="BtnCancelRegister"/>
-                <Button Style="{DynamicResource PrimaryButtonStyle}" Content="{DynamicResource Glb_BtnSave}"
-                        Click="BtnSaveCustomer"/>
+            <StackPanel Grid.Row="1" Orientation="Vertical" Margin="20,12,0,0">
+                <TextBlock Text="{DynamicResource RegCostumer_PersonalInfo}"
+               Style="{DynamicResource DescriptionLabelStyle}"
+               Margin="0,0,0,8"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="6*" MaxWidth="640"/>
+                        <ColumnDefinition Width="*" MinWidth="0"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0" HorizontalAlignment="Stretch">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBox x:Name="TbCostumerName" 
+                                 Grid.Column="0" Grid.Row="0"
+                                 Tag="{DynamicResource RegCostumer_TbCostumerName}" 
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 HorizontalAlignment="Stretch" VerticalAlignment="Top"
+                                 Margin="0,0,10,10"
+                                 TextChanged="RequiredFields_TextChanged"/>
+                        <TextBox x:Name="TbLastName" 
+                                 Grid.Column="1" Grid.Row="0"
+                                 Tag="{DynamicResource RegCostumer_TbLastName}" 
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 HorizontalAlignment="Stretch" VerticalAlignment="Top"
+                                 Margin="10,0,0,10"
+                                 TextChanged="RequiredFields_TextChanged"/>
+                        <TextBox x:Name="TbPhoneNumber"
+                                 Grid.Column="0" Grid.Row="1"
+                                 Tag="{DynamicResource Glb_PhoneNumber}"
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 Margin="0,0,10,0"/>
+                        <TextBox x:Name="TbEmailAddress" 
+                                 Grid.Column="1" Grid.Row="1"
+                                 Tag="{DynamicResource Glb_EmailAddress}"
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 Margin="10,0,0,0"
+                                 TextChanged="RequiredFields_TextChanged"/>
+                    </Grid>
+                </Grid>
+
+                <TextBlock Text="{DynamicResource RegCostumer_AddressCostumer}"
+                           Style="{DynamicResource DescriptionLabelStyle}"
+                           Margin="0,12,0,8"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="7*" MaxWidth="640"/>
+                        <ColumnDefinition Width="*" MinWidth="0"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid Grid.Column="0" HorizontalAlignment="Stretch">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="5*" />
+                            <ColumnDefinition Width="2.5*" />
+                            <ColumnDefinition Width="2.5*" />
+                        </Grid.ColumnDefinitions>
+
+                        <TextBox x:Name="TbAddress"
+                                 Grid.Column="0"
+                                 Tag="{DynamicResource Glb_AddressName}"
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 Margin="0,0,10,0"
+                                 TextChanged="RequiredFields_TextChanged"/>
+                        <TextBox x:Name="TbZipCode"
+                                 Grid.Column="1"
+                                 Tag="{DynamicResource Glb_ZipCode}"
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 Margin="10,0,5,0"
+                                 TextChanged="RequiredFields_TextChanged"/>
+                        <TextBox x:Name="TbCity" 
+                                 Grid.Column="2"
+                                 Tag="{DynamicResource Glb_City}"
+                                 Style="{DynamicResource TextBoxStyle}"
+                                 Margin="5,0,0,0"
+                                 TextChanged="RequiredFields_TextChanged"/>
+                    </Grid>
+                </Grid>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="7*" MaxWidth="640"/>
+                        <ColumnDefinition Width="*" MinWidth="0"/>
+                    </Grid.ColumnDefinitions>
+                </Grid>
+
+
             </StackPanel>
-        </StackPanel>
+
+            <Border Grid.Row="2" BorderBrush="{DynamicResource SecondaryBrush}"
+                    BorderThickness="0,0.5,0,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="20,0" VerticalAlignment="Center">
+                    <Button x:Name="BtnCancel" Style="{DynamicResource SecondaryButtonNoIconStyle}"
+                            Content="{DynamicResource Glb_Cancel}"
+                            Margin="0,0,10,0"
+                            Click="Click_BtnCancel"/>
+                    <Button x:Name="BtnRegisterCostumer" 
+                            Style="{DynamicResource PrimaryButtonStyle}"
+                            Content="{DynamicResource RegCostumer_BtnRegisterCostumer}"
+                            Click="Click_BtnRegisterCostumer">
+                        <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
+                    </Button>
+                </StackPanel>
+            </Border>
+
+        </Grid>
+
     </Grid>
 </Page>
